--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 # Ignore bundler config.
-#/.bundle
+/.bundle
 
 # Ignore the default SQLite database.
 #/db/*.sqlite3
@@ -18,3 +18,6 @@
 
 # Ignore uploaded test images.
 /public/uploads
+
+#Ignore sublime
+/motoristas.sublime-workspace
